# ci-demo-python

./: README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
